[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "pydra_core/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["pydra_core"]

[project]
name = "pydra_core"
version = "0.0.2"
description = "Python package for calculating hydraulic loads"
readme = "README.md"
license = "GPL-3.0"
authors = [
  { name = "Niels van der Vegt", email = "n.vandervegt@hkv.nl" },
  { name = "Paulina Kindermann", email = ""},
  { name = "Jochem Caspers", email = ""},
  { name = "David Haasnoot", email = ""},
  { name = "Guy Dupuits", email = ""},
  { name = "Jerom Aerts", email = ""},
  { name = "Rolf Waterman", email = ""},
  { name = "Bart Thonus", email = ""},
  { name = "Marit Zethof, email = """}
  
]

[project.urls]
Documentation = "https://hkv-products-services.github.io/pydra_core/"
Source = "https://github.com/HKV-products-services/pydra_core"